--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,3 +1,5 @@
 @import "~bootswatch/dist/lumen/variables";
 @import "~bootstrap/scss/bootstrap";
 @import "~bootswatch/dist/lumen/bootswatch";
+@import "~ng-pick-datetime/assets/style/picker.min.css";
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
